--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   freezed: ^2.4.5
   go_router_builder: ^2.3.3
   json_serializable: ^6.7.1
+  mockito: ^5.4.2
 
 # Config generate when build
 flutter_gen:
